Grease Pencil Strokes drawn at 0.0 Strength still visible #94799

Closed
opened 2022-01-10 21:24:42 +01:00 by Matthew Gafford · 18 comments

System Information
Operating system: Win10
Graphics card: RTX3070

Blender Version
Broken: 3.0.0
Worked: N/A

Short Description
Setting the stroke Strength down to 0.0 still produces visible lines, easier to tell once you've drawn a couple of them over each other. True zero-Strength strokes are possible, but only by going into the Sculpt Mode, choosing the Strength tool, and holding CTRL while using the brush over the lines you've already drawn.

image.png

Steps to Reproduce

  • Open .blend file
  • Draw a couple of strokes with 0 strength over each other
    #94799.blend

To draw a stroke with 0 strength:

  • Repeat above steps
  • switch to Sculpt mode
  • Select strength from toolbar
  • Hold down Ctrl and draw

see: https://youtu.be/KRaTjUoh-8A

**System Information** Operating system: Win10 Graphics card: RTX3070 **Blender Version** Broken: 3.0.0 Worked: N/A **Short Description** Setting the stroke Strength down to 0.0 still produces visible lines, easier to tell once you've drawn a couple of them over each other. True zero-Strength strokes are possible, but only by going into the Sculpt Mode, choosing the Strength tool, and holding CTRL while using the brush over the lines you've already drawn. ![image.png](https://archive.blender.org/developer/F12799882/image.png) **Steps to Reproduce** - Open .blend file - Draw a couple of strokes with 0 strength over each other [#94799.blend](https://archive.blender.org/developer/F12801434/T94799.blend) To draw a stroke with 0 strength: - Repeat above steps - switch to Sculpt mode - Select strength from toolbar - Hold down Ctrl and draw see: https://youtu.be/KRaTjUoh-8A

Added subscriber: @AFoxInSpace

Added subscriber: @AFoxInSpace

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

Thanks for the report. I am not able to draw any stroke with 0 strength

Do you use some tablet or you are able to reproduce with mouse clicks?

Are you able to reproduce this issue with factory preferences?: {nav Edit > Preferences > Save & Load (3 horizontal lines) > Load Factory preferences}
image.png

(run C.scene.tool_settings.gpencil_sculpt_paint.brush.strength in console to check if strength is actually 0)

Thanks for the report. I am not able to draw any stroke with 0 strength Do you use some tablet or you are able to reproduce with mouse clicks? Are you able to reproduce this issue with factory preferences?: {nav Edit > Preferences > Save & Load (3 horizontal lines) > Load Factory preferences} ![image.png](https://archive.blender.org/developer/F12717357/image.png) (run `C.scene.tool_settings.gpencil_sculpt_paint.brush.strength` in console to check if strength is actually 0)

It's hard to see with just one stroke drawn at 0 strength, but it's there. Draw a couple over top of each other and you will start seeing them.

Here's a video. Factory settings, drawing with my mouse instead of the tablet, the result is the same.

https://youtu.be/KRaTjUoh-8A

It's hard to see with just one stroke drawn at 0 strength, but it's there. Draw a couple over top of each other and you will start seeing them. Here's a video. Factory settings, drawing with my mouse instead of the tablet, the result is the same. https://youtu.be/KRaTjUoh-8A

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Added subscriber: @antoniov

Added subscriber: @antoniov

Thanks for clarifying @AFoxInSpace . Now I can confirm.

@antoniov , can you look at this? Behavior looks same on older versions as well. Is that a floating point precision error or something like that?

Thanks for clarifying @AFoxInSpace . Now I can confirm. @antoniov , can you look at this? Behavior looks same on older versions as well. Is that a floating point precision error or something like that?

I try to reproduce and I cannot... I draw again and again over the same place and never get the "shadow" stroke.

image.png

image.png

I try to reproduce and I cannot... I draw again and again over the same place and never get the "shadow" stroke. ![image.png](https://archive.blender.org/developer/F12801534/image.png) ![image.png](https://archive.blender.org/developer/F12801536/image.png)

Added subscriber: @frogstomp-4

Added subscriber: @frogstomp-4

I can also confirm. Tested in 3.0 and 3.1 from blank file. Takes about 100 strokes to see it and good contrast monitor. It goes away with sculpt -> strength

image.png

I can also confirm. Tested in 3.0 and 3.1 from blank file. Takes about 100 strokes to see it and good contrast monitor. It goes away with sculpt -> strength ![image.png](https://archive.blender.org/developer/F12801554/image.png)

@frogstomp-4 Tablet or mouse?

@frogstomp-4 Tablet or mouse?
Antonio Vazquez self-assigned this 2022-01-11 22:40:03 +01:00

This issue was referenced by fcdaeba778

This issue was referenced by fcdaeba7782073b4b1166ed912ad7983cd89b36c

This issue was referenced by ccb2456df6

This issue was referenced by ccb2456df6d4aa5113146e57e32be46f648d0efa

This issue was referenced by 44ac03785c

This issue was referenced by 44ac03785c520e2ecf4fe1cb607693958f6d26a9

This issue was referenced by ac3d07ad17

This issue was referenced by ac3d07ad178d1bcea1b96e22003444e31f66e5da

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Behavior looks same on older versions as well

Hi @antoniov , also mention this bugfix for backporting

  • #77348 (Blender LTS: Maintenance Task 2.83)
  • #88449 (Blender LTS: Maintenance Task 2.93)
  • #93479 (3.0 Potential candidates for corrective releases)

Fix seems safe to backport but double check with Philipp.

> Behavior looks same on older versions as well Hi @antoniov , also mention this bugfix for backporting - #77348 (Blender LTS: Maintenance Task 2.83) - #88449 (Blender LTS: Maintenance Task 2.93) - #93479 (3.0 Potential candidates for corrective releases) Fix seems safe to backport but double check with Philipp.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94799
There is no content yet.