Fix T94799: GPencil Strokes drawn at 0.0 Strength still visible

There was a clamp with a value greater than 0.